# G4OCCT-onshape

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml  fly.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-fly-dev.yml  publish-containers.yml
frontend/: app.js  index.html  style.css  viewer.js
onshape-app/: README.md
onshape-app/server/: Dockerfile  app.py  oauth.py  requirements.txt
onshape-app/worker/: run_worker.py
server/: Dockerfile  app.py  fly.toml  jobs.py  requirements.txt
tests/: test_server.py
worker/: Dockerfile  apptainer.def  run_worker.py
worker/g4occt_runner/: CMakeLists.txt  main.cc
